--- a/pom.xml
+++ b/pom.xml
@@ -343,7 +343,7 @@ limitations under the License.
     <gpg.useagent>true</gpg.useagent>
     <spotless-maven-plugin.version>2.43.0</spotless-maven-plugin.version>
     <mavenPluginToolsVersion>3.13.1</mavenPluginToolsVersion>
-    <mavenFluidoSkinVersion>1.12.0</mavenFluidoSkinVersion>
+    <mavenFluidoSkinVersion>2.0.0-M10</mavenFluidoSkinVersion>
     <mavenSurefireVersion>3.4.0</mavenSurefireVersion>
     <junit5Version>5.11.0</junit5Version>
     <spotless.action>check</spotless.action>
