--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,9 @@ limitations under the License.
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>3.2.6</version>
+          <configuration>
+            <bestPractices>true</bestPractices>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
