--- a/pom.xml
+++ b/pom.xml
@@ -602,6 +602,15 @@ limitations under the License.
                 <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
               </sortPom>
             </pom>
+            <markdown>
+              <includes>
+                <include>**/*.md</include>
+              </includes>
+              <excludes>
+                <excludes>target/**</excludes>
+              </excludes>
+              <flexmark />
+            </markdown>
             <upToDateChecking>
               <enabled>true</enabled>
             </upToDateChecking>
