--- a/pom.xml
+++ b/pom.xml
@@ -318,7 +318,7 @@ limitations under the License.
     </repository>
     <snapshotRepository>
       <id>sonatype-central-portal</id>
-      <url>https://central.sonatype.com/repository/maven-snapshots</url>
+      <url>${plexusDistMgmtSnapshotsUrl}</url>
     </snapshotRepository>
     <!-- site distribution management must be override in child projects -->
     <site>
@@ -338,7 +338,7 @@ limitations under the License.
     <maven.compiler.proc>none</maven.compiler.proc>
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <plexusDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/plexus-snapshots</plexusDistMgmtSnapshotsUrl>
+    <plexusDistMgmtSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots</plexusDistMgmtSnapshotsUrl>
     <project.build.outputTimestamp>2025-05-23T18:11:49Z</project.build.outputTimestamp>
     <gpg.useagent>true</gpg.useagent>
     <spotless-maven-plugin.version>2.44.5</spotless-maven-plugin.version>
