--- a/pom.xml
+++ b/pom.xml
@@ -353,6 +353,8 @@ limitations under the License.
 
     <!-- njord configuration -->
     <njord.autoPublish>true</njord.autoPublish>
+    <jord.publishingType>automatic</jord.publishingType>
+    <njord.waitForStates>true</njord.waitForStates>
     <njord.enabled>false</njord.enabled>
   </properties>
 
