use different server id for snapshots

--- a/pom.xml
+++ b/pom.xml
@@ -314,10 +314,12 @@ limitations under the License.
   <distributionManagement>
     <repository>
       <id>sonatype-central-portal</id>
+      <name>Sonatype Central Portal</name>
       <url>https://repo.maven.apache.org/maven2</url>
     </repository>
     <snapshotRepository>
-      <id>sonatype-central-portal</id>
+      <id>${plexusDistMgmtSnapshotsId}</id>
+      <name>${plexusDistMgmtSnapshotsName}</name>
       <url>${plexusDistMgmtSnapshotsUrl}</url>
     </snapshotRepository>
     <!-- site distribution management must be override in child projects -->
@@ -338,7 +340,12 @@ limitations under the License.
     <maven.compiler.proc>none</maven.compiler.proc>
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+
+    <plexusDistMgmtSnapshotsId>sonatype-central-snapshots</plexusDistMgmtSnapshotsId>
+    <plexusDistMgmtSnapshotsName>Sonatype Central Snapshots</plexusDistMgmtSnapshotsName>
     <plexusDistMgmtSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots</plexusDistMgmtSnapshotsUrl>
+
     <project.build.outputTimestamp>2025-05-23T18:11:49Z</project.build.outputTimestamp>
     <gpg.useagent>true</gpg.useagent>
     <spotless-maven-plugin.version>2.44.5</spotless-maven-plugin.version>
