--- a/pom.xml
+++ b/pom.xml
@@ -341,7 +341,7 @@ limitations under the License.
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <plexusDistMgmtSnapshotsId>sonatype-central-snapshots</plexusDistMgmtSnapshotsId>
+    <plexusDistMgmtSnapshotsId>sonatype-central-portal</plexusDistMgmtSnapshotsId>
     <plexusDistMgmtSnapshotsName>Sonatype Central Snapshots</plexusDistMgmtSnapshotsName>
     <plexusDistMgmtSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots</plexusDistMgmtSnapshotsUrl>
 
