--- a/pom.xml
+++ b/pom.xml
@@ -893,9 +893,9 @@ limitations under the License.
     </profile>
 
     <profile>
-      <id>java11+</id>
+      <id>java17+</id>
       <activation>
-        <jdk>[11,25)</jdk>
+        <jdk>[17,)</jdk>
       </activation>
 
       <properties>
@@ -904,7 +904,7 @@ limitations under the License.
       </properties>
 
       <build>
-        <!--- newer versions of plugins requires JDK 11 -->
+        <!--- newer versions of plugins requires JDK 17 -->
         <plugins>
           <plugin>
             <groupId>com.diffplug.spotless</groupId>
