Configure njord publisher and releaseURL in pom
Otherwise people not having according `settings.xml` get misleading
error messages during release. Compare with
https://github.com/maveniverse/njord/issues/162#issuecomment-3388587992

--- a/pom.xml
+++ b/pom.xml
@@ -357,7 +357,9 @@ limitations under the License.
     <sisuMavenPluginVersion>0.9.0.M4</sisuMavenPluginVersion>
     <invoker.streamLogsOnFailures>true</invoker.streamLogsOnFailures>
 
-    <!-- njord configuration -->
+    <!-- njord configuration (https://maveniverse.eu/docs/njord/configuration/#njord-properties) -->
+    <njord.releaseUrl>njord:template:release-sca</njord.releaseUrl>
+    <njord.publisher>sonatype-cp</njord.publisher>
     <njord.autoPublish>true</njord.autoPublish>
     <njord.publishingType>automatic</njord.publishingType>
     <njord.waitForStates>true</njord.waitForStates>
