--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ limitations under the License.
 
   <groupId>org.codehaus.plexus</groupId>
   <artifactId>plexus</artifactId>
-  <version>24-SNAPSHOT</version>
+  <version>24</version>
   <packaging>pom</packaging>
 
   <name>Plexus</name>
@@ -302,7 +302,7 @@ limitations under the License.
   <scm>
     <connection>scm:git:https://github.com/codehaus-plexus/plexus-pom.git</connection>
     <developerConnection>${project.scm.connection}</developerConnection>
-    <tag>master</tag>
+    <tag>plexus-24</tag>
     <url>https://github.com/codehaus-plexus/plexus-pom/tree/${project.scm.tag}/</url>
   </scm>
 
@@ -345,7 +345,7 @@ limitations under the License.
     <plexusDistMgmtSnapshotsName>Sonatype Central Snapshots</plexusDistMgmtSnapshotsName>
     <plexusDistMgmtSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots</plexusDistMgmtSnapshotsUrl>
 
-    <project.build.outputTimestamp>2025-08-17T17:02:51Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-10-11T11:22:44Z</project.build.outputTimestamp>
     <gpg.useagent>true</gpg.useagent>
     <spotless-maven-plugin.version>3.0.0</spotless-maven-plugin.version>
     <mavenPluginToolsVersion>3.15.1</mavenPluginToolsVersion>
